# moneymachine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: markdown.instructions.md  python.instructions.md  risk-engine.instructions.md
.github/prompts/: add-changelog.prompt.md  audit.prompt.md  log-error-fix.prompt.md  log-pattern.prompt.md  pre-commit-check.prompt.md  session-handoff.prompt.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  TRADING_THESIS.md
infra/grafana/provisioning/dashboards/: providers.yml
infra/grafana/provisioning/datasources/: datasources.yml
infra/prometheus/: prometheus.yml
infra/timescaledb/init/: 01_schema.sql
src/backtest/: __init__.py  engine.py
src/core/: __init__.py  __main__.py  cli.py  config.py  logging.py  runner.py  types.py
src/data/: __init__.py  binance_ws.py  gap_detector.py  ingestion.py  storage.py
src/metrics/: __init__.py
src/oms/: __init__.py  binance_rest.py  manager.py
src/risk/: __init__.py  engine.py  limits.py  state.py
src/strategy/: __init__.py  grid.py  mm.py
tests/: README.md  conftest.py  test_backtest_engine.py  test_binance_rest.py  test_binance_ws.py  test_binance_ws_live.py  test_gap_detector.py  test_ingestion.py  test_oms_manager.py  test_risk_engine.py  test_runner.py  test_smoke.py  test_storage.py  test_storage_integration.py  test_strategy_grid.py  test_strategy_mm.py  test_types.py
