[project]
name = "maquina-de-dinheiro"
version = "0.0.1"
description = "Sistema de trading algorítmico contínuo em mercados cripto (Grid + MM híbrido)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Uillen Machado" }]
license = { text = "Proprietary" }
keywords = ["trading", "market-making", "crypto", "grid", "quant"]

dependencies = [
    # Core async / serialization
    "uvloop>=0.19; sys_platform != 'win32'",
    "msgspec>=0.18",
    "orjson>=3.10",
    # Networking
    "websockets>=12.0",
    "httpx>=0.27",
    # Numérico / dados
    "numpy>=1.26,<3.0",
    "pandas>=2.2",
    "polars>=1.0",
    "numba>=0.59",
    # Banco
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    # Logging / observabilidade
    "structlog>=24.1",
    "prometheus-client>=0.20",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
trading = [
    # Frameworks de trading — pinned conservadoramente; serão atualizados na Fase 4
    "nautilus-trader>=1.190",
    "ccxt>=4.3",
]
research = [
    "jupyterlab>=4.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
    "optuna>=3.6",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
]
backtest = [
    "hftbacktest>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "hypothesis>=6.103",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-pyyaml>=6.0",
]

[project.scripts]
mdd = "core.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/data", "src/strategy", "src/risk", "src/oms", "src/backtest", "src/metrics"]

[tool.uv]
package = true

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # bugbear
    "C4",       # comprehensions
    "SIM",      # simplify
    "ASYNC",    # async best practices
    "S",        # security (bandit)
    "RET",      # return
    "PL",       # pylint
    "RUF",      # ruff-specific
]
ignore = [
    "PLR0913",  # too many arguments — comum em construtores de estratégia
    "PLR2004",  # magic value — falsos positivos em testes
    "S101",     # assert — necessário em tests
    "S311",     # random — não usado para crypto
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "S105", "S106"]
"src/**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "nautilus_trader.*",
    "hftbacktest.*",
    "ccxt.*",
    "numba.*",
]
ignore_missing_imports = true

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "unit: testes unitários rápidos",
    "integration: testes que tocam infraestrutura (DB, redis)",
    "slow: testes lentos (> 1s)",
    "live: testes que conectam a exchange real — NÃO rodar em CI",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:nautilus_trader.*",
]

# ---------- coverage ----------
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/**/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
